# tauri-rspc-prisma-any-template

./: .eslintignore  .eslintrc  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/: renovate.json
.github/workflows/: test.yml
core/: Cargo.toml
core/prisma/: Cargo.toml
core/src/: lib.rs  utils.rs
core/src/db/: migrator.rs
core/src/routes/: db.rs  mod.rs
prisma/: schema.prisma
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
