[workspace]
resolver = "2"
members = [
    "src-tauri",
    "core",
    "core/prisma"
]

[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = [
    "sqlite",
    "rspc",
    "sqlite-create-many",
    "migrations"
] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = [
    "sqlite",
    "rspc",
    "sqlite-create-many",
    "migrations"
] }
rspc = { version = "0.1.3" }